--- a/hyperlight.html
+++ b/hyperlight.html
@@ -35,9 +35,22 @@
             <li class="nav-item">
               <a class="nav-link" href="videojuegos.html">Videojuegos | </a>
             </li>
-            <li class="nav-item" style="text-align: left;">
-              <a class="nav-link" href="nosotros.html">¿Quienes somos?</a>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">¿Quienes somos? |</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="crear_cuenta.html" style="font-size: 18px;">Crear cuenta || </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="iniciar_sesion.html" style="font-size: 18px; ">Iniciar sesión || </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="donaciones.html" style="font-size: 18px; ">Donaciones || </a>
+            </li>
+
           </ul>
         </div>
       </nav>
