--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
   <link href="css/estilos.css" type="text/css" rel="stylesheet"> 
   <link rel="icon" href="img/PageLogo/favicon.png">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
 
 </head>
 <body>
+
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark rounded border-bottom border-primary">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
       <span class="navbar-toggler-icon"></span>
@@ -21,26 +23,39 @@
       <img src="img/PageLogo/Main page icon.png" width="85" height="85" alt="Volver a inicio">
     </a>
 
-    <!-- enlaces -->
-    <div class="collapse navbar-collapse" id="opciones">   
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html" style="font-size: 40px; letter-spacing: 10px;">DOWNWARE</a>
-      </div>
-      <ul class="navbar-nav" style="letter-spacing: 2px;">
-        <li class="nav-item">
-          <a class="nav-link"; href="index.html">Inicio | </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="software.html">Programas | </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="videojuegos.html">Videojuegos | </a>
-        </li>
-        <li class="nav-item" style="text-align: left;">
-          <a class="nav-link" href="nosotros.html">¿Quienes somos?</a>
-        </li>
-      </ul>
-    </div>
+        <!-- enlaces -->
+        <div class="collapse navbar-collapse" id="opciones">   
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html" style="font-size: 40px; letter-spacing: 10px;">DOWNWARE</a>
+          </div>
+          <ul class="navbar-nav" style="letter-spacing: 2px;">
+            <li class="nav-item">
+              <a class="nav-link"; href="index.html">Inicio | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="software.html">Programas | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="videojuegos.html">Videojuegos | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">¿Quienes somos? |</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="crear_cuenta.html" style="font-size: 18px;">Crear cuenta || </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="iniciar_sesion.html" style="font-size: 18px; ">Iniciar sesión || </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="donaciones.html" style="font-size: 18px; ">Donaciones || </a>
+            </li>
+
+          </ul>
+        </div>
   </nav>
   <br><br>
 
@@ -305,7 +320,7 @@
   </footer>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
 </body>
