--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Biblioteca de software</title> 
+        <title>Inicio de sesion</title> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
