Se modificaron las fuentes de la tabla del API en donaciones para que fuesen responsive

--- a/donaciones.html
+++ b/donaciones.html
@@ -89,13 +89,13 @@
 
         <br><br>
         <div class="container rounded container-xl boxed" style="background-color:rgb(15, 4, 0)">
-        <table class="table" id="monedas" style="color: rgb(255, 226, 238); font-size: 22px;">
+        <table class="table" id="monedas" style="color: rgb(255, 226, 238); font-size: 2vw;">
             <thead>
               
                 <tr>
-                    <th scope="col" style="font-size: 32px;">Código</th>
-                    <th scope="col" style="font-size: 32px;">Nombre</th>
-                    <th scope="col" style="font-size: 32px;">Valor</th>
+                    <th scope="col" style="font-size: 3vw;">Código</th>
+                    <th scope="col" style="font-size: 3vw;">Nombre</th>
+                    <th scope="col" style="font-size: 3vw;">Valor</th>
                 </tr>
             </thead>
             <tbody>
